# money-panal-api

./: .gitignore  README.md  compose.yaml  database.db  pyproject.toml  test_logger.py
alembic/: env.py
alembic/versions/: 0d1bffb1cce8_improve_all_tables_add_user_table.py  2613dfc48c40_change_created_at_field_onto_all_tables.py  494b7a05c070_little_change_in_transactiontable.py  5aa8ac5da88f_change_user_id_from_base_to_table.py  724ba4d742ea_revision.py  8088536a2b46_uptade_hashed_password_to_password.py  bbcc87ad5bdf_other_little_change_in_transactiontable.py  f1ddd87d6062_initialize_tables.py  fa93580a27b1_change_created_at_field_onto_.py
app/: main.py
app/application/interfaces/: password_hasher.py  token_provider.py  unit_of_work.py
app/application/services/: account_service.py  category_service.py  debt_service.py  obligation_service.py  transaction_service.py  user_service.py
app/core/: logger.py
app/domain/: exceptions.py
app/domain/entities/: account  account.py  caterogy.py  debt.py  obligation.py  transaction.py  user.py
app/domain/repositories/: account_repository.py  category_repository.py  debt_repository.py  obligation_repository.py  transaction_repository.py  user_repository.py
app/infraestructure/: database.py  unit_of_work.py
app/infraestructure/models/: __init__.py  account.py  category.py  debt.py  obligation.py  transaction.py  (+1 more)
app/presentation/: handlers.py
tests/integration/: conftest.py  test_account.py  test_category.py  test_debt.py  test_obligation.py  test_transaction.py  test_user.py
tests/unit/: test_auth_user_case.py
(+55 files in other folders)
